# first-bevy-game

./: Cargo.toml  README.md
src/: guideschapter.rs  main.rs
src/greetings/: mod.rs
src/guideschapter/: mod.rs  selection.rs
src/guideschapter/graphics/: dialogue_view.rs  inspector.rs  mod.rs
src/guideschapter/graphics/console/: mod.rs
src/guideschapter/graphics/engine2d/: mod.rs
src/guideschapter/graphics/engine2d/user_interface/: mod.rs  selection_menu.rs
src/guideschapter/logic/: dialogue_system.rs  mod.rs
src/tools/: mod.rs
