[package]
name = "first-bevy-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.21.0"
bevy_window = "0.12.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# bevy-inspector 0.12.0 does not compile unless: 
[profile.dev.package."bevy-inspector-egui"]
        opt-level = 1
